--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,14 @@ footer>a, .title1 {
 }
 
 #top-sec {
-	background: yellow;
+	background: grey;
+}
+
+#top-sec>div{
+	width:1000px;
+	height: 80px;
+	margin: auto;
+	padding: 10px;
 }
 
 #article-1 {
@@ -66,17 +73,16 @@ footer>a, .title1 {
 
 
 
-#top-sec>nav {
+#top-sec>div>nav {
 	float: left;
-	background: red;
 	width: 700px;
 }
 
-#top-sec>form {
+#top-sec>div>form {
 	float:left;
 	width:300px;
 }
 body {
-	background-repeat: no-repeat;
-	background-position: y-50px
+	background-repeat: no-repeat;*/
+	/*background-position: y-50px*/
 }
