--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,11 @@ footer>a, .title1 {
 #aside-sec li {
 	float: left;
 	margin: 0 10px 15px 0;
-	list-style: none;
 }
 
+li {
+	list-style: none;
+}
 
 #first-sec ul {
 	width: 1100px;
@@ -71,8 +73,6 @@ footer>a, .title1 {
 	background: orange;
 }
 
-
-
 #top-sec>div>nav {
 	float: left;
 	width: 700px;
@@ -81,6 +81,15 @@ footer>a, .title1 {
 #top-sec>div>form {
 	float:left;
 	width:300px;
+}
+
+
+#bottom {
+	background: green;
+}
+
+#bottom dl, #bottom>aside {
+	float: left
 }
 body {
 	background-repeat: no-repeat;*/
