--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,66 @@
-.main-link, .marked-date {
+a {
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+#first-sec li {
+	width:250px;
+	height: 150px;
+	margin: 20px 20px 20px 0;
+	float: left;
+	padding: 20px;
+	border-radius: 15px;
+}
+
+
+.main-link {
+	font-size: 1em;
+}
+
+.main-link,
+.marked-date {
 	background-color: blue;
+	background-size: 100px 60px;
+	color: white;
+	/*text-align: center;*/
+}
+
+.day {
+	font-size: 2em;
+}
+
+body {
+	font-family: "Times New Roman", Georgia, Serif;
+	font-size: 100%;
+	font-weight: 200;
+}
+
+h1,
+h2 {
+	font-weight: inherit;
+}
+
+.white-sec * {
 	color: white;
 }
 
-.white-sec *{
-	color: white;
+#first-sec {
+	background-image: url("../img/slide-bg-complexity.jpg");
+	background-size: 100%;
+	background-repeat: no-repeat;
+}
+
+#second-sec {
+	background: lightblue;
+}
+
+#third-sec {
+	background-image: url(../img/news-and-events-bg.jpg);
+	background-size: 100%;
+	background-repeat: no-repeat;
 }
 
 footer>a, .title1 {
@@ -16,38 +72,36 @@ footer>a, .title1 {
 	margin: auto;
 }
 
-#aside-sec li {
-	float: left;
-	margin: 0 10px 15px 0;
-}
-
 li {
 	list-style: none;
+}
+
+#first-sec h1,
+#first-sec p,
+#first-sec ul,
+#first-sec .main-link{
+	position: relative;
+	left: 100px;
 }
 
 #first-sec ul {
 	width: 1100px;
 	list-style: none;
 	overflow: hidden;
-	margin: auto;
 }
 
 #aside-sec {
 	background: #e3e3e3;
+	color:grey;
 }
 
-
-#first-sec li {
-	width:300px;
-	height: 180px;
-	margin: 20px 20px 15px 0;
-	float: left;
-	padding: 20px;
+#third-sec dd {
+	font-size: 1.4em;
 }
 
 #first-sec li>a {
-	position: relative;
-	top: 60px;
+	position: absolute;
+	top: 175px;
 }
 
 #top-sec {
@@ -62,15 +116,15 @@ li {
 }
 
 #article-1 {
-	background: pink;
+	background: rgba(255,0,255,0.9);
 }
 
 #article-2 {
-	background: green;
+	background: rgba(0,255,0,0.9);
 }
 
 #article-3 {
-	background: orange;
+	background: hsla(45, 100%, 50%,0.9);
 }
 
 #top-sec>div>nav {
@@ -90,8 +144,4 @@ li {
 
 #bottom dl, #bottom>aside {
 	float: left
-}
-body {
-	background-repeat: no-repeat;*/
-	/*background-position: y-50px*/
 }
