--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+body {
+	font-family: "Times New Roman", Georgia, Serif;
+	font-size: 100%;
+	font-weight: 200;
+}
+
 a {
 	text-decoration: none;
 }
@@ -15,9 +21,10 @@ a:hover {
 	border-radius: 15px;
 }
 
-
 .main-link {
 	font-size: 1em;
+	border-radius: 5px;
+	text-align: left 10px;
 }
 
 .main-link,
@@ -32,12 +39,6 @@ a:hover {
 	font-size: 2em;
 }
 
-body {
-	font-family: "Times New Roman", Georgia, Serif;
-	font-size: 100%;
-	font-weight: 200;
-}
-
 h1,
 h2 {
 	font-weight: inherit;
@@ -49,8 +50,8 @@ h2 {
 
 #first-sec {
 	background-image: url("../img/slide-bg-complexity.jpg");
-	background-size: 100%;
 	background-repeat: no-repeat;
+	width: 100%;
 }
 
 #second-sec {
