--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ a:hover {
 	/*float: left;*/
     display: inline-block;
 	padding: 20px;
-	border-radius: 15px;
+	border-radius: 10px;
 }
 
 #first-sec li:last-child {
@@ -90,6 +90,9 @@ a:hover {
     background-color: #3398CB;
     text-align: center;
     line-height: 200%;
+	height: 70px;
+	padding-bottom: 10px;
+	margin-right: 10px;
 }
 
 .day {
@@ -98,6 +101,12 @@ a:hover {
     border-bottom-style: dotted;
     border-bottom-width: 1px;
     padding: 10px 5px;
+	padding-bottom: 10px;
+}
+
+.month {
+	display:inline-block;
+	padding-top: 8px;
 }
 
 h1,
@@ -134,12 +143,21 @@ h2 {
 
 #third-sec {
 	background-image: url(../img/backgrounds/news-and-events-bg.jpg);
+	height: 350px;
+}
+
+#third-sec a {
+	position: absolute;
+	margin-top: 110px;
 }
 
 #third-sec p {
 	display: inline-block;
-	width: 300px;
+	width: 270px;
+	height: 80px;
 	background-color: rgba(255,255,255,0.4);
+	position: absolute;
+	padding: 10px;
 }
 
 #third-sec .wrapper {
@@ -149,12 +167,12 @@ h2 {
 
 #third-sec li {
 	display: inline-block;
-	width: 300px;
+	width: 320px;
 }
 
 #third-sec h2 {
 	text-align: center;
-	padding-top: 25px;
+	padding-top: 50px;
 	padding-bottom: 40px;
 }
 
@@ -171,14 +189,46 @@ h2 {
 	margin-top: 30px;
 }
 
-footer>a, .title1 {
+#aside-sec footer>h3,
+.title1 {
 	color: blue;
 }
 
-#aside-sec ul {
-	width: 200px;
-	margin: auto;
+#second-sec footer {
+	display: inline-block;
 }
+
+#aside-sec footer+img {
+	position: absolute;
+	padding-right: 10px;
+	padding-bottom: 0px;
+}
+
+/*#aside-sec ul {*/
+	/*width: 200px;*/
+	/*margin: auto;*/
+/*}*/
+
+#aside-sec article {
+	display: inline-block;
+	padding: 10px;
+	width: 400px;
+	background-color: white;
+}
+
+#aside-sec footer {
+	display: inline-block;
+}
+
+.story img {
+	display: inline-block;
+	float: left;
+}
+
+.story {
+	height: 100px;
+}
+
 
 li {
 	list-style: none;
