--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ html {
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
-	overflow: auto;
+	overflow: hidden;
 	width: 100%;
 }
 
@@ -124,8 +124,9 @@ a:hover {
 	float: left;
     background-color: #3398CB;
     text-align: center;
-    line-height: 200%;
+    line-height: 180%;
 	height: 80px;
+	width: 64px;
 	/*padding-bottom: 10px;*/
 	margin-right: 10px;
 	/*padding: 0 10px;*/
@@ -138,6 +139,9 @@ a:hover {
     border-bottom-style: dotted;
     border-bottom-width: 1px;
 	line-height: 50px;
+	padding: 0 3px;
+	display: inline-block;
+	text-align: center;
 }
 
 /*.month {*/
@@ -195,6 +199,7 @@ h2 {
 	position: absolute;
 	padding: 10px;
 	color: black;
+	font-size: 0.8rem;
 }
 
 #third-sec p:hover {
